# doctor_at_fingertips

./: .gitignore  CLionProjCodeStyle.xml  CMakeLists.txt  README.md  proj5-tests.eww  proj5.ewd  proj5.eww  proj5.sln  proj5.vcxproj  proj5.vcxproj.filters  start-npf.bat
common/: README.md
common/FreeRTOS-Plus/: readme.txt
common/FreeRTOS-Plus/Source/: readme.txt
common/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/portable/Compiler/IAR/: pack_struct_end.h
common/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/portable/NetworkInterface/LM3S-8962/: NetworkInterface.c
common/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/portable/NetworkInterface/Zynq/: x_emacpsif_dma.c
common/FreeRTOS/Source/portable/MSVC-MingW/: portmacro.h
common/SecondConsoleLogger/: ConsoleLoggerLib.sln
common/SecondConsoleLogger/ConsoleLoggerHelper/: ConsoleLoggerHelper.c  ConsoleLoggerHelper.vcxproj  ConsoleLoggerHelper.vcxproj.filters
common/SecondConsoleLogger/ConsoleLoggerLib/: ConsoleLogger.c  ConsoleLogger.h  ConsoleLoggerLib.vcxproj  ConsoleLoggerLib.vcxproj.filters
common/SecondConsoleLogger/test/: ConsoleLoggerTest.c  ConsoleLoggerTest.vcxproj  ConsoleLoggerTest.vcxproj.filters
common/curseslib/: ncurses.vcxproj
common/curseslib/src/win32/: pdcscrn.c
common/curseslib/test/: firework.c  test.sln  test.vcxproj
common/include/driverlib/: driverlib-cm3.ewd  driverlib-cm3.ewp  driverlib-cm4f.ewp  rit128x96x4.c  rit128x96x4.h  sysctl.h
common/include/inc/c/: DLib_Config_Full.h  DLib_Config_Normal.h  DLib_Defaults.h  DLib_Product.h  DLib_Product_fenv.h  DLib_Product_stdlib.h  DLib_Product_string.h  DLib_Threads.h  DLib_float_setup.h  LowLevelIOInterface.h  arm_cmse.h  arm_interrupt.h  arm_itm.h  arm_neon.h  assert.h  cmsis_iar.h  complex.h  ctype.h  errno.h  fenv.h  float.h  iar_dlmalloc.h  iar_dynamic_init.h  intrinsics.h  inttypes.h  io_macros.h  iso646.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  (+20 more)
include/: FreeRTOSIPConfig.h  ranges.h
include/server/: server.h
include/tasks/: commands.h
include/utils/: hardware_timer.h  pulse_transducer.h
proj5/: CMakeLists.txt  proj5-comms.sln  proj5-comms.vcxproj  proj5-comms.vcxproj.filters  proj5.ewp  proj5.eww  proj5.sln  proj5.vcxproj  proj5.vcxproj.filters  start-npf.bat
proj5/doc/: alarm-states.puml  data-flow-control.vsdx  proj2-class-diag-pg1.puml  proj2-class-diag-pg2.puml  project-activity-diag.puml  projectUseCase.puml
proj5/include/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  RTOSDebugTrace.h  hardware_port.h  ranges.h  system_tasks.h  task_commands.h  types.h
proj5/include/drivers/: pressure_cuff.h  pulse_transducer.h
proj5/include/server/: FreeRTOS_TCP_server.h  FreeRTOS_server_private.h  server.h  webpage_data.c
proj5/include/tasks/: commands.h  system.h
proj5/include/utils/: cmd_dispatch.h  float_print.h  hardware_timer.h  lcd_print.h  led_control.h  optfft.h  pulse_transducer.h  sockcmdline.h  speaker_control.h  uartstdio.h  ustdlib.h
proj5/src/: hardware_port.c  main.c  startup_ewarm.c  windows_port.c
proj5/src/tasks/: alarms_warnings.c  cmd_dispatch.c  compute.c  computeEKG.c  controller.c  display.c  enunciate.c  init.c  ipconn.c  key_scan.c  measure.c  measureEKG.c  serial_comms.c  status.c  system_tasks.c
proj5/src/utils/: RTOSIPTrace.c  cmd_parser.c  float_print.c  hardware_timer.c  lcd_print.c  led_control.c  optfft.c  pressure_cuff.c  pulse_transducer.c  sockcmdline.c  speaker_control.c  tables.c  uartstdio.c
proj5/src/webserver/: FreeRTOS_HTTP_server.c  FreeRTOS_TCP_server.c
proj5/test/lcd_custom_driver/: test_lcd_driver.ewp
proj5/test/task_compute/: test_compute_task.c
proj5/test/task_hardware_announce/: test_hardware_announce.ewp
proj5/test/task_keyscan/: test_keypad_task.ewp
proj5/test/task_measure/: test_measure_task.c
proj5/test/task_pulse_driver/: test_pulse_driver.ewp
proj5/test/task_timings/: test_task_timings.c  test_task_timings.ewp
proj5/test/task_warning/: test_warning_task.c
proj5/test/tick_interrupt/: test_tick_interrupt.c  test_tick_interrupt.ewd  test_tick_interrupt.ewp
proj5/win32RTOS/: win32RTOS-proj5.vcxproj
src/: main.c
src/tasks/: cmd_dispatch.c  measureEKG.c
src/utils/: RTOSDebugTrace.c  RTOSDebugTraceWindows.c  led_control.c  optfft.c  pulse_transducer.c  speaker_control.c  tables.c  ustdlib.c
test/lcd_custom_driver/: test_lcd_driver.c
test/task_compute/: test_compute_task.ewp
test/task_hardware_announce/: test_hardware_announce.c
test/task_keyscan/: test_keypad_task.c  test_keypad_task.ewd
test/task_measure/: test_measure_task.ewd  test_measure_task.ewp
test/task_pulse_driver/: test_pulse_driver.c
test/task_timings/: startup.c
test/task_warning/: test_warning_task.ewp  uart-interrupt-ex-.c
win32RTOS/: win32RTOS-proj5.vcxproj  win32RTOS-proj5.vcxproj.filters
