cmake_minimum_required(VERSION 3.8)
project(cpsc5530embedded)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        class-site-directory/code-samples/analogin0.c
        class-site-directory/code-samples/bits0.c
        class-site-directory/code-samples/bits1.c
        class-site-directory/code-samples/bits2.c
        class-site-directory/code-samples/blinkusr.c
        class-site-directory/code-samples/fnctptr0.c
        class-site-directory/code-samples/kernel0.c
        class-site-directory/code-samples/kernel1.c
        class-site-directory/code-samples/kernel2.c
        class-site-directory/code-samples/pwm.c
        class-site-directory/code-samples/rw1.c
        class-site-directory/code-samples/semi0.c
        class-site-directory/code-samples/signal0.c
        class-site-directory/code-samples/signal1.c
        class-site-directory/code-samples/signal4.c
        class-site-directory/code-samples/structs0.c
        class-site-directory/code-samples/structs1.c
        class-site-directory/code-samples/time3.c
        class-site-directory/code-samples/typdef0.c
        class-site-directory/code-samples/var0.c
        class-site-directory/code-samples/var1.c
        class-site-directory/code-samples/var2.c
        common/driverlib/adc.c
        common/driverlib/adc.h
        common/driverlib/can.c
        common/driverlib/can.h
        common/driverlib/comp.c
        common/driverlib/comp.h
        common/driverlib/cpu.c
        common/driverlib/cpu.h
        common/driverlib/debug.h
        common/driverlib/eeprom.c
        common/driverlib/eeprom.h
        common/driverlib/epi.c
        common/driverlib/epi.h
        common/driverlib/ethernet.c
        common/driverlib/ethernet.h
        common/driverlib/fan.c
        common/driverlib/fan.h
        common/driverlib/flash.c
        common/driverlib/flash.h
        common/driverlib/fpu.c
        common/driverlib/fpu.h
        common/driverlib/gpio.c
        common/driverlib/gpio.h
        common/driverlib/hibernate.c
        common/driverlib/hibernate.h
        common/driverlib/i2c.c
        common/driverlib/i2c.h
        common/driverlib/i2s.c
        common/driverlib/i2s.h
        common/driverlib/interrupt.c
        common/driverlib/interrupt.h
        common/driverlib/lpc.c
        common/driverlib/lpc.h
        common/driverlib/mpu.c
        common/driverlib/mpu.h
        common/driverlib/peci.c
        common/driverlib/peci.h
        common/driverlib/pin_map.h
        common/driverlib/pwm.c
        common/driverlib/pwm.h
        common/driverlib/qei.c
        common/driverlib/qei.h
        common/driverlib/rom.h
        common/driverlib/rom_map.h
        common/driverlib/rtos_bindings.h
        common/driverlib/ssi.c
        common/driverlib/ssi.h
        common/driverlib/sysctl.c
        common/driverlib/sysctl.h
        common/driverlib/sysexc.c
        common/driverlib/sysexc.h
        common/driverlib/systick.c
        common/driverlib/systick.h
        common/driverlib/timer.c
        common/driverlib/timer.h
        common/driverlib/uart.c
        common/driverlib/uart.h
        common/driverlib/udma.c
        common/driverlib/udma.h
        common/driverlib/usb.c
        common/driverlib/usb.h
        common/driverlib/watchdog.c
        common/driverlib/watchdog.h
        common/include/inc/c/arm_cmse.h
        common/include/inc/c/arm_interrupt.h
        common/include/inc/c/arm_itm.h
        common/include/inc/c/arm_neon.h
        common/include/inc/c/assert.h
        common/include/inc/c/cmsis_iar.h
        common/include/inc/c/complex.h
        common/include/inc/c/ctype.h
        common/include/inc/c/DLib_Config_Full.h
        common/include/inc/c/DLib_Config_Normal.h
        common/include/inc/c/DLib_Defaults.h
        common/include/inc/c/DLib_float_setup.h
        common/include/inc/c/DLib_Product.h
        common/include/inc/c/DLib_Product_fenv.h
        common/include/inc/c/DLib_Product_stdlib.h
        common/include/inc/c/DLib_Product_string.h
        common/include/inc/c/DLib_Threads.h
        common/include/inc/c/errno.h
        common/include/inc/c/fenv.h
        common/include/inc/c/float.h
        common/include/inc/c/iar_dlmalloc.h
        common/include/inc/c/iar_dynamic_init.h
        common/include/inc/c/intrinsics.h
        common/include/inc/c/inttypes.h
        common/include/inc/c/io_macros.h
        common/include/inc/c/iso646.h
        common/include/inc/c/limits.h
        common/include/inc/c/locale.h
        common/include/inc/c/LowLevelIOInterface.h
        common/include/inc/c/math.h
        common/include/inc/c/setjmp.h
        common/include/inc/c/signal.h
        common/include/inc/c/stdalign.h
        common/include/inc/c/stdarg.h
        common/include/inc/c/stdatomic.h
        common/include/inc/c/stdbool.h
        common/include/inc/c/stddef.h
        common/include/inc/c/stdint.h
        common/include/inc/c/stdio.h
        common/include/inc/c/stdlib.h
        common/include/inc/c/stdnoreturn.h
        common/include/inc/c/string.h
        common/include/inc/c/target.h
        common/include/inc/c/tgmath.h
        common/include/inc/c/threads.h
        common/include/inc/c/time.h
        common/include/inc/c/time32.h
        common/include/inc/c/time64.h
        common/include/inc/c/uchar.h
        common/include/inc/c/wchar.h
        common/include/inc/c/wctype.h
        common/include/inc/c/xatomic.h
        common/include/inc/c/xctype.h
        common/include/inc/c/xlocale_alconv.h
        common/include/inc/c/xlocale_lconv.h
        common/include/inc/c/xtgmath.h
        common/include/inc/c/ycheck.h
        common/include/inc/c/yfuns.h
        common/include/inc/c/ysizet.h
        common/include/inc/c/yvals.h
        common/include/inc/asmdefs.h
        common/include/inc/hw_adc.h
        common/include/inc/hw_can.h
        common/include/inc/hw_comp.h
        common/include/inc/hw_eeprom.h
        common/include/inc/hw_epi.h
        common/include/inc/hw_ethernet.h
        common/include/inc/hw_fan.h
        common/include/inc/hw_flash.h
        common/include/inc/hw_gpio.h
        common/include/inc/hw_hibernate.h
        common/include/inc/hw_i2c.h
        common/include/inc/hw_i2s.h
        common/include/inc/hw_ints.h
        common/include/inc/hw_lpc.h
        common/include/inc/hw_memmap.h
        common/include/inc/hw_nvic.h
        common/include/inc/hw_peci.h
        common/include/inc/hw_pwm.h
        common/include/inc/hw_qei.h
        common/include/inc/hw_ssi.h
        common/include/inc/hw_sysctl.h
        common/include/inc/hw_sysexc.h
        common/include/inc/hw_timer.h
        common/include/inc/hw_types.h
        common/include/inc/hw_uart.h
        common/include/inc/hw_udma.h
        common/include/inc/hw_usb.h
        common/include/inc/hw_watchdog.h
        common/include/inc/lm3s101.h
        common/include/inc/lm3s102.h
        common/include/inc/lm3s1110.h
        common/include/inc/lm3s1133.h
        common/include/inc/lm3s1138.h
        common/include/inc/lm3s1150.h
        common/include/inc/lm3s1162.h
        common/include/inc/lm3s1165.h
        common/include/inc/lm3s1166.h
        common/include/inc/lm3s1332.h
        common/include/inc/lm3s1435.h
        common/include/inc/lm3s1439.h
        common/include/inc/lm3s1512.h
        common/include/inc/lm3s1538.h
        common/include/inc/lm3s1601.h
        common/include/inc/lm3s1607.h
        common/include/inc/lm3s1608.h
        common/include/inc/lm3s1620.h
        common/include/inc/lm3s1621.h
        common/include/inc/lm3s1625.h
        common/include/inc/lm3s1626.h
        common/include/inc/lm3s1627.h
        common/include/inc/lm3s1635.h
        common/include/inc/lm3s1636.h
        common/include/inc/lm3s1637.h
        common/include/inc/lm3s1651.h
        common/include/inc/lm3s1751.h
        common/include/inc/lm3s1776.h
        common/include/inc/lm3s1811.h
        common/include/inc/lm3s1816.h
        common/include/inc/lm3s1850.h
        common/include/inc/lm3s1911.h
        common/include/inc/lm3s1918.h
        common/include/inc/lm3s1937.h
        common/include/inc/lm3s1958.h
        common/include/inc/lm3s1960.h
        common/include/inc/lm3s1968.h
        common/include/inc/lm3s1969.h
        common/include/inc/lm3s1b21.h
        common/include/inc/lm3s1c21.h
        common/include/inc/lm3s1c26.h
        common/include/inc/lm3s1c58.h
        common/include/inc/lm3s1d21.h
        common/include/inc/lm3s1d26.h
        common/include/inc/lm3s1f11.h
        common/include/inc/lm3s1f16.h
        common/include/inc/lm3s1g21.h
        common/include/inc/lm3s1g58.h
        common/include/inc/lm3s1h11.h
        common/include/inc/lm3s1h16.h
        common/include/inc/lm3s1j11.h
        common/include/inc/lm3s1j16.h
        common/include/inc/lm3s1n11.h
        common/include/inc/lm3s1n16.h
        common/include/inc/lm3s1p51.h
        common/include/inc/lm3s1r21.h
        common/include/inc/lm3s1r26.h
        common/include/inc/lm3s1w16.h
        common/include/inc/lm3s1z16.h
        common/include/inc/lm3s2110.h
        common/include/inc/lm3s2139.h
        common/include/inc/lm3s2276.h
        common/include/inc/lm3s2410.h
        common/include/inc/lm3s2412.h
        common/include/inc/lm3s2432.h
        common/include/inc/lm3s2533.h
        common/include/inc/lm3s2601.h
        common/include/inc/lm3s2608.h
        common/include/inc/lm3s2616.h
        common/include/inc/lm3s2620.h
        common/include/inc/lm3s2637.h
        common/include/inc/lm3s2651.h
        common/include/inc/lm3s2671.h
        common/include/inc/lm3s2678.h
        common/include/inc/lm3s2730.h
        common/include/inc/lm3s2739.h
        common/include/inc/lm3s2776.h
        common/include/inc/lm3s2793.h
        common/include/inc/lm3s2911.h
        common/include/inc/lm3s2918.h
        common/include/inc/lm3s2919.h
        common/include/inc/lm3s2939.h
        common/include/inc/lm3s2948.h
        common/include/inc/lm3s2950.h
        common/include/inc/lm3s2965.h
        common/include/inc/lm3s2b93.h
        common/include/inc/lm3s2d93.h
        common/include/inc/lm3s2u93.h
        common/include/inc/lm3s300.h
        common/include/inc/lm3s301.h
        common/include/inc/lm3s308.h
        common/include/inc/lm3s310.h
        common/include/inc/lm3s315.h
        common/include/inc/lm3s316.h
        common/include/inc/lm3s317.h
        common/include/inc/lm3s328.h
        common/include/inc/lm3s3634.h
        common/include/inc/lm3s3651.h
        common/include/inc/lm3s3654.h
        common/include/inc/lm3s3739.h
        common/include/inc/lm3s3748.h
        common/include/inc/lm3s3749.h
        common/include/inc/lm3s3826.h
        common/include/inc/lm3s3j26.h
        common/include/inc/lm3s3n26.h
        common/include/inc/lm3s3w26.h
        common/include/inc/lm3s3z26.h
        common/include/inc/lm3s5632.h
        common/include/inc/lm3s5651.h
        common/include/inc/lm3s5652.h
        common/include/inc/lm3s5656.h
        common/include/inc/lm3s5662.h
        common/include/inc/lm3s5732.h
        common/include/inc/lm3s5737.h
        common/include/inc/lm3s5739.h
        common/include/inc/lm3s5747.h
        common/include/inc/lm3s5749.h
        common/include/inc/lm3s5752.h
        common/include/inc/lm3s5762.h
        common/include/inc/lm3s5791.h
        common/include/inc/lm3s5951.h
        common/include/inc/lm3s5956.h
        common/include/inc/lm3s5b91.h
        common/include/inc/lm3s5c31.h
        common/include/inc/lm3s5c36.h
        common/include/inc/lm3s5c51.h
        common/include/inc/lm3s5c56.h
        common/include/inc/lm3s5d51.h
        common/include/inc/lm3s5d56.h
        common/include/inc/lm3s5d91.h
        common/include/inc/lm3s5g31.h
        common/include/inc/lm3s5g36.h
        common/include/inc/lm3s5g51.h
        common/include/inc/lm3s5g56.h
        common/include/inc/lm3s5k31.h
        common/include/inc/lm3s5k36.h
        common/include/inc/lm3s5p31.h
        common/include/inc/lm3s5p36.h
        common/include/inc/lm3s5p3b.h
        common/include/inc/lm3s5p51.h
        common/include/inc/lm3s5p56.h
        common/include/inc/lm3s5r31.h
        common/include/inc/lm3s5r36.h
        common/include/inc/lm3s5t36.h
        common/include/inc/lm3s5u91.h
        common/include/inc/lm3s5y36.h
        common/include/inc/lm3s600.h
        common/include/inc/lm3s601.h
        common/include/inc/lm3s608.h
        common/include/inc/lm3s610.h
        common/include/inc/lm3s6100.h
        common/include/inc/lm3s611.h
        common/include/inc/lm3s6110.h
        common/include/inc/lm3s612.h
        common/include/inc/lm3s613.h
        common/include/inc/lm3s615.h
        common/include/inc/lm3s617.h
        common/include/inc/lm3s618.h
        common/include/inc/lm3s628.h
        common/include/inc/lm3s6420.h
        common/include/inc/lm3s6422.h
        common/include/inc/lm3s6432.h
        common/include/inc/lm3s6537.h
        common/include/inc/lm3s6610.h
        common/include/inc/lm3s6611.h
        common/include/inc/lm3s6618.h
        common/include/inc/lm3s6633.h
        common/include/inc/lm3s6637.h
        common/include/inc/lm3s6730.h
        common/include/inc/lm3s6753.h
        common/include/inc/lm3s6911.h
        common/include/inc/lm3s6918.h
        common/include/inc/lm3s6938.h
        common/include/inc/lm3s6950.h
        common/include/inc/lm3s6952.h
        common/include/inc/lm3s6965.h
        common/include/inc/lm3s6c11.h
        common/include/inc/lm3s6c65.h
        common/include/inc/lm3s6g11.h
        common/include/inc/lm3s6g65.h
        common/include/inc/lm3s800.h
        common/include/inc/lm3s801.h
        common/include/inc/lm3s808.h
        common/include/inc/lm3s811.h
        common/include/inc/lm3s812.h
        common/include/inc/lm3s815.h
        common/include/inc/lm3s817.h
        common/include/inc/lm3s818.h
        common/include/inc/lm3s828.h
        common/include/inc/lm3s8530.h
        common/include/inc/lm3s8538.h
        common/include/inc/lm3s8630.h
        common/include/inc/lm3s8730.h
        common/include/inc/lm3s8733.h
        common/include/inc/lm3s8738.h
        common/include/inc/lm3s8930.h
        common/include/inc/lm3s8933.h
        common/include/inc/lm3s8938.h
        common/include/inc/lm3s8962.h
        common/include/inc/lm3s8970.h
        common/include/inc/lm3s8971.h
        common/include/inc/lm3s8c62.h
        common/include/inc/lm3s8g62.h
        common/include/inc/lm3s9781.h
        common/include/inc/lm3s9790.h
        common/include/inc/lm3s9792.h
        common/include/inc/lm3s9971.h
        common/include/inc/lm3s9997.h
        common/include/inc/lm3s9b81.h
        common/include/inc/lm3s9b90.h
        common/include/inc/lm3s9b92.h
        common/include/inc/lm3s9b95.h
        common/include/inc/lm3s9b96.h
        common/include/inc/lm3s9bn2.h
        common/include/inc/lm3s9bn5.h
        common/include/inc/lm3s9bn6.h
        common/include/inc/lm3s9c97.h
        common/include/inc/lm3s9d81.h
        common/include/inc/lm3s9d90.h
        common/include/inc/lm3s9d92.h
        common/include/inc/lm3s9d96.h
        common/include/inc/lm3s9dn5.h
        common/include/inc/lm3s9dn6.h
        common/include/inc/lm3s9g97.h
        common/include/inc/lm3s9gn5.h
        common/include/inc/lm3s9l71.h
        common/include/inc/lm3s9l97.h
        common/include/inc/lm3s9u81.h
        common/include/inc/lm3s9u90.h
        common/include/inc/lm3s9u92.h
        common/include/inc/lm3s9u96.h
        common/include/inc/lm4f110b2qr.h
        common/include/inc/lm4f110c4qr.h
        common/include/inc/lm4f110e5qr.h
        common/include/inc/lm4f110h5qr.h
        common/include/inc/lm4f111b2qr.h
        common/include/inc/lm4f111c4qr.h
        common/include/inc/lm4f111e5qr.h
        common/include/inc/lm4f111h5qr.h
        common/include/inc/lm4f112c4qc.h
        common/include/inc/lm4f112e5qc.h
        common/include/inc/lm4f112h5qc.h
        common/include/inc/lm4f112h5qd.h
        common/include/inc/lm4f120b2qr.h
        common/include/inc/lm4f120c4qr.h
        common/include/inc/lm4f120e5qr.h
        common/include/inc/lm4f120h5qr.h
        common/include/inc/lm4f121b2qr.h
        common/include/inc/lm4f121c4qr.h
        common/include/inc/lm4f121e5qr.h
        common/include/inc/lm4f121h5qr.h
        common/include/inc/lm4f122c4qc.h
        common/include/inc/lm4f122e5qc.h
        common/include/inc/lm4f122h5qc.h
        common/include/inc/lm4f122h5qd.h
        common/include/inc/lm4f130c4qr.h
        common/include/inc/lm4f130e5qr.h
        common/include/inc/lm4f130h5qr.h
        common/include/inc/lm4f131c4qr.h
        common/include/inc/lm4f131e5qr.h
        common/include/inc/lm4f131h5qr.h
        common/include/inc/lm4f132c4qc.h
        common/include/inc/lm4f132e5qc.h
        common/include/inc/lm4f132h5qc.h
        common/include/inc/lm4f132h5qd.h
        common/include/inc/lm4f210b2qr.h
        common/include/inc/lm4f210c4qr.h
        common/include/inc/lm4f210e5qr.h
        common/include/inc/lm4f210h5qr.h
        common/include/inc/lm4f211b2qr.h
        common/include/inc/lm4f211c4qr.h
        common/include/inc/lm4f211e5qr.h
        common/include/inc/lm4f211h5qr.h
        common/include/inc/lm4f212c4qc.h
        common/include/inc/lm4f212e5qc.h
        common/include/inc/lm4f212h5bb.h
        common/include/inc/lm4f212h5qc.h
        common/include/inc/lm4f212h5qd.h
        common/include/inc/lm4f230e5qr.h
        common/include/inc/lm4f230h5qr.h
        common/include/inc/lm4f231e5qr.h
        common/include/inc/lm4f231h5qr.h
        common/include/inc/lm4f232e5qc.h
        common/include/inc/lm4f232h5bb.h
        common/include/inc/lm4f232h5qc.h
        common/include/inc/lm4f232h5qd.h
        common/include/inc/lm4fs11h5bb.h
        common/include/inc/lm4fs1ah5bb.h
        common/include/inc/lm4fs1ge5bb.h
        common/include/inc/lm4fs1gh5bb.h
        common/include/inc/lm4fs99h5bb.h
        common/include/inc/lm4fsxlh5bb.h
        common/include/utils/cmdline.c
        common/include/utils/cmdline.h
        common/include/utils/cpu_usage.c
        common/include/utils/cpu_usage.h
        common/include/utils/crc.c
        common/include/utils/crc.h
        common/include/utils/flash_pb.c
        common/include/utils/flash_pb.h
        common/include/utils/fswrapper.c
        common/include/utils/fswrapper.h
        common/include/utils/isqrt.c
        common/include/utils/isqrt.h
        common/include/utils/locator.c
        common/include/utils/locator.h
        common/include/utils/lwiplib.c
        common/include/utils/lwiplib.h
        common/include/utils/ptpdlib.c
        common/include/utils/ptpdlib.h
        common/include/utils/ringbuf.c
        common/include/utils/ringbuf.h
        common/include/utils/scheduler.c
        common/include/utils/scheduler.h
        common/include/utils/sine.c
        common/include/utils/sine.h
        common/include/utils/softi2c.c
        common/include/utils/softi2c.h
        common/include/utils/softssi.c
        common/include/utils/softssi.h
        common/include/utils/softuart.c
        common/include/utils/softuart.h
        common/include/utils/swupdate.c
        common/include/utils/swupdate.h
        common/include/utils/tftp.c
        common/include/utils/tftp.h
        common/include/utils/uartstdio.c
        common/include/utils/uartstdio.h
        common/include/utils/ustdlib.c
        common/include/utils/ustdlib.h
        proj1/iar-workspace/extra_applications/drivers/rit128x96x4.c
        proj1/iar-workspace/extra_applications/drivers/rit128x96x4.h
        proj1/iar-workspace/extra_applications/application1.c
        proj1/iar-workspace/extra_applications/application2.c
        proj1/iar-workspace/extra_applications/application3.c
        proj1/iar-workspace/extra_applications/startup.c
        proj1/iar-workspace/orig-ek-lm3s8962/hello/hello.c
        proj1/iar-workspace/orig-ek-lm3s8962/hello/startup.c
        proj1/iar-workspace/proj1a/drivers/rit128x96x4.c
        proj1/iar-workspace/proj1a/drivers/rit128x96x4.h
        proj1/iar-workspace/proj1a/disp_lcd_char.c
        proj1/iar-workspace/proj1a/disp_lcd_char.h
        proj1/iar-workspace/proj1a/project1a-2017.c
        proj1/iar-workspace/proj1a/project1b-2017.c
        proj1/iar-workspace/proj1a/project1c-2017.c
        proj1/iar-workspace/proj1a/startup.c
        proj1/iar-workspace/proj1abc/drivers/rit128x96x4.c
        proj1/iar-workspace/proj1abc/drivers/rit128x96x4.h
        proj1/iar-workspace/proj1abc/disp_lcd_char.c
        proj1/iar-workspace/proj1abc/disp_lcd_char.h
        proj1/iar-workspace/proj1abc/project1a-2017.c
        proj1/iar-workspace/proj1abc/project1b-2017.c
        proj1/iar-workspace/proj1abc/project1c-2017.c
        proj1/iar-workspace/proj1abc/startup.c
        proj1/_intellisense_fixes.h
        proj2/src/iar-proj2/driverlib/debug.h
        proj2/src/iar-proj2/drivers/rit128x96x4.c
        proj2/src/iar-proj2/drivers/rit128x96x4.h
        proj2/src/iar-proj2/lcd/print.c
        proj2/src/iar-proj2/lcd/print.h
        proj2/src/iar-proj2/tasks/compute.c
        proj2/src/iar-proj2/tasks/display.c
        proj2/src/iar-proj2/tasks/globals.c
        proj2/src/iar-proj2/tasks/measure.c
        proj2/src/iar-proj2/tasks/status.c
        proj2/src/iar-proj2/tasks/tasks.c
        proj2/src/iar-proj2/tasks/tasks.h
        proj2/src/iar-proj2/tasks/warning_alarm.c
        proj2/src/iar-proj2/utils/timer.c
        proj2/src/iar-proj2/utils/timer.h
        proj2/src/iar-proj2/utils/ustdlib.c
        proj2/src/iar-proj2/utils/ustdlib.h
        proj2/src/iar-proj2/globals.h
        proj2/src/iar-proj2/main.c
        proj2/src/iar-proj2/proj2.c
        proj2/src/iar-proj2/ranges.h
        proj2/src/iar-proj2/startup.c
        proj2/src/iar-proj2/tcb.c
        proj2/src/iar-proj2/tcb.h
        proj2/src/iar-proj2/types.h
        proj2/src/_intellisense_fixes.h)

add_executable(cpsc5530embedded ${SOURCE_FILES})